big changes in this branch

--- a/examples/cloze_manyfiles_2/_output_/cloze_manyfiles__2025-03-27_09-48-57.md
+++ b/examples/cloze_manyfiles_2/_output_/cloze_manyfiles__2025-03-27_09-48-57.md
@@ -1,13 +1,13 @@
 ---
-title: "dados-study.Rmd"
+title: "cloze_manyfiles_2.md"
 author: "Pedro Cruz"
-date: "2025-02-20_15-26-18"
+date: "2025-03-25_17-34-43"
 output:
   html_document: default
 ---
 
 
-# Model dados-study.Rmd - CLOZE
+# Model cloze_manyfiles_2.md - CLOZE
 
 
 
@@ -28,15 +28,14 @@ Considerando
 
 segue a conclusão é que
 
-* **rejeita-se** a hipótese nula (H0) porque \(\alpha\) {:MULTICHOICE_S:%100%é maior\~%0%é menor} que o valor-p.
+* {:MULTICHOICE_S:%100%rejeita-se\~%0%não se rejeita} a hipótese nula (H0) porque \(\alpha\) **é maior** que o valor-p.
 
-Assim, a média populacional (ou valor esperado) \(\mu\) **não é significativamente maior** que 5.
+Assim, a média populacional (ou valor esperado) \(\mu\) **é significativamente maior** que 5.
+
 ### feedback
 
 
-
-#(Consulte o docente das suas turmas ou uma OT.)
-
+(No feedback is available. Please consult your class teacher(s).)
 
 
 
@@ -57,15 +56,14 @@ Considerando
 
 segue a conclusão é que
 
-* **não se rejeita** a hipótese nula (H0) porque \(\alpha\) {:MULTICHOICE_S:%0%é maior\~%100%é menor} que o valor-p.
+* {:MULTICHOICE_S:%0%rejeita-se\~%100%não se rejeita} a hipótese nula (H0) porque \(\alpha\) {:MULTICHOICE_S:%0%é maior\~%100%é menor} que o valor-p.
 
-Assim, a média populacional (ou valor esperado) \(\mu\) {:MULTICHOICE_S:%0%não é significativamente maior\~%100%é significativamente maior} que 5.
+Assim, a média populacional (ou valor esperado) \(\mu\) **não é significativamente maior** que 5.
+
 ### feedback
 
 
-
-#(Consulte o docente das suas turmas ou uma OT.)
-
+(No feedback is available. Please consult your class teacher(s).)
 
 
 
@@ -88,14 +86,12 @@ segue a conclusão é que
 
 * {:MULTICHOICE_S:%100%rejeita-se\~%0%não se rejeita} a hipótese nula (H0) porque \(\alpha\) {:MULTICHOICE_S:%100%é maior\~%0%é menor} que o valor-p.
 
-Assim, a média populacional (ou valor esperado) \(\mu\) {:MULTICHOICE_S:%100%não é significativamente maior\~%0%é significativamente maior} que 5.
+Assim, a média populacional (ou valor esperado) \(\mu\) {:MULTICHOICE_S:%100%é significativamente maior\~%0%não é significativamente maior} que 5.
 
 ### feedback
 
 
-
-(Consulte o docente das suas turmas ou uma OT.)
-
+(No feedback is available. Please consult your class teacher(s).)
 
 
 
@@ -110,19 +106,18 @@ H0: \(\mu = 5\) versus  H1: \(\mu > 5\)
 
 Considerando
 
-* \(z_\text{obs}\) = {:NUMERICAL:%100%0.5244:0.01},
-* valor-p = **0.3** = \( P(Z \ge  z_\text{obs}) \),
+* \(z_\text{obs}\) = **0.5244**,
+* valor-p = {:MULTICHOICE_S:%0%0.001\~%0%0.05\~%0%0.01\~%100%0.3} = \( P(Z \ge  z_\text{obs}) \),
 * \(\alpha\) = **0.05**
 
 segue a conclusão é que
 
 * {:MULTICHOICE_S:%0%rejeita-se\~%100%não se rejeita} a hipótese nula (H0) porque \(\alpha\) {:MULTICHOICE_S:%0%é maior\~%100%é menor} que o valor-p.
 
-Assim, a média populacional (ou valor esperado) \(\mu\) {:MULTICHOICE_S:%0%não é significativamente maior\~%100%é significativamente maior} que 5.
+Assim, a média populacional (ou valor esperado) \(\mu\) {:MULTICHOICE_S:%0%é significativamente maior\~%100%não é significativamente maior} que 5.
+
 ### feedback
 
 
-
-#(Consulte o docente das suas turmas ou uma OT.)
-
+(No feedback is available. Please consult your class teacher(s).)
 
