xml moodle first version

--- a/examples/cloze_manyfiles_3/_output_/cloze_manyfiles__2025-03-29_09-02-33.md
+++ b/examples/cloze_manyfiles_3/_output_/cloze_manyfiles__2025-03-29_09-02-33.md
@@ -1,7 +1,7 @@
 ---
 title: "cloze_manyfiles_3.md"
 author: "Pedro Cruz"
-date: "2025-03-29_09-08-49"
+date: "2025-03-29_08-52-14"
 output:
   html_document: default
 ---
@@ -141,11 +141,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(5, 0.9)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > {:NUMERICAL:%100%4:0}) = **0.59**
+P(Y > **4**) = {:NUMERICAL:%100%0.59:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **60** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de {:NUMERICAL:%100%60:0} é **1**.
 
 
 
@@ -170,11 +170,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.5)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > {:NUMERICAL:%100%2:0}) = **0.312**
+P(Y > **2**) = {:NUMERICAL:%100%0.312:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **20** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de {:NUMERICAL:%100%20:0} é **1**.
 
 
 
@@ -199,11 +199,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.6)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > {:NUMERICAL:%100%2:0}) = **0.475**
+P(Y > **2**) = {:NUMERICAL:%100%0.475:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **30** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de {:NUMERICAL:%100%30:0} é **1**.
 
 
 
@@ -228,11 +228,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.7)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > {:NUMERICAL:%100%3:0}) = **0.24**
+P(Y > **3**) = {:NUMERICAL:%100%0.24:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **40** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de {:NUMERICAL:%100%40:0} é **1**.
 
 
 
@@ -248,10 +248,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **40** é {:NUM
 ## Variante 001 (data row is 04)
 
 
-Seja Y o número de dias, num total de **5** dias, em que a procura é satisfeita com a entrega diária de **42** embalagens.
+Seja Y o número de dias, num total de {:NUMERICAL:%100%5:0} dias, em que a procura é satisfeita com a entrega diária de **42** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.8:0.05}.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.8**.
 
 **(a)**
 
@@ -259,11 +259,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(5, 0.8)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **3**) = **0.737**
+P(Y > **3**) = {:NUMERICAL:%100%0.737:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **50** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **50** é **1**.
 
 
 
@@ -277,10 +277,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **50** é {:NUM
 ## Variante 002 (data row is 05)
 
 
-Seja Y o número de dias, num total de **5** dias, em que a procura é satisfeita com a entrega diária de **21** embalagens.
+Seja Y o número de dias, num total de {:NUMERICAL:%100%5:0} dias, em que a procura é satisfeita com a entrega diária de **21** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.9:0.05}.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.9**.
 
 **(a)**
 
@@ -288,11 +288,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(5, 0.9)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **4**) = **0.59**
+P(Y > **4**) = {:NUMERICAL:%100%0.59:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **60** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **60** é **1**.
 
 
 
@@ -306,10 +306,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **60** é {:NUM
 ## Variante 003 (data row is 01)
 
 
-Seja Y o número de dias, num total de **4** dias, em que a procura é satisfeita com a entrega diária de **35** embalagens.
+Seja Y o número de dias, num total de {:NUMERICAL:%100%4:0} dias, em que a procura é satisfeita com a entrega diária de **35** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.5:0.05}.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.5**.
 
 **(a)**
 
@@ -317,11 +317,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.5)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **2**) = **0.312**
+P(Y > **2**) = {:NUMERICAL:%100%0.312:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **20** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **20** é **1**.
 
 
 
@@ -335,10 +335,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **20** é {:NUM
 ## Variante 004 (data row is 02)
 
 
-Seja Y o número de dias, num total de **4** dias, em que a procura é satisfeita com a entrega diária de **37** embalagens.
+Seja Y o número de dias, num total de {:NUMERICAL:%100%4:0} dias, em que a procura é satisfeita com a entrega diária de **37** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.6:0.05}.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.6**.
 
 **(a)**
 
@@ -346,11 +346,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.6)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **2**) = **0.475**
+P(Y > **2**) = {:NUMERICAL:%100%0.475:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **30** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **30** é **1**.
 
 
 
@@ -366,10 +366,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **30** é {:NUM
 ## Variante 001 (data row is 03)
 
 
-Seja Y o número de dias, num total de {:NUMERICAL:%100%4:0} dias, em que a procura é satisfeita com a entrega diária de **38** embalagens.
+Seja Y o número de dias, num total de **4** dias, em que a procura é satisfeita com a entrega diária de **38** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.7**.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.7:0.05}.
 
 **(a)**
 
@@ -377,11 +377,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.7)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **3**) = **0.24**
+P(Y > **3**) = {:NUMERICAL:%100%0.24:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **40** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **40** é **1**.
 
 
 
@@ -395,10 +395,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **40** é {:NUM
 ## Variante 002 (data row is 04)
 
 
-Seja Y o número de dias, num total de {:NUMERICAL:%100%5:0} dias, em que a procura é satisfeita com a entrega diária de **42** embalagens.
+Seja Y o número de dias, num total de **5** dias, em que a procura é satisfeita com a entrega diária de **42** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.8**.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.8:0.05}.
 
 **(a)**
 
@@ -406,11 +406,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(5, 0.8)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **3**) = **0.737**
+P(Y > **3**) = {:NUMERICAL:%100%0.737:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **50** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **50** é **1**.
 
 
 
@@ -424,10 +424,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **50** é {:NUM
 ## Variante 003 (data row is 05)
 
 
-Seja Y o número de dias, num total de {:NUMERICAL:%100%5:0} dias, em que a procura é satisfeita com a entrega diária de **21** embalagens.
+Seja Y o número de dias, num total de **5** dias, em que a procura é satisfeita com a entrega diária de **21** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.9**.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.9:0.05}.
 
 **(a)**
 
@@ -435,11 +435,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(5, 0.9)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **4**) = **0.59**
+P(Y > **4**) = {:NUMERICAL:%100%0.59:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **60** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **60** é **1**.
 
 
 
@@ -453,10 +453,10 @@ A probabilidade do produto não faltar em nenhum dia ao longo de **60** é {:NUM
 ## Variante 004 (data row is 01)
 
 
-Seja Y o número de dias, num total de {:NUMERICAL:%100%4:0} dias, em que a procura é satisfeita com a entrega diária de **35** embalagens.
+Seja Y o número de dias, num total de **4** dias, em que a procura é satisfeita com a entrega diária de **35** embalagens.
 
 
-Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é **0.5**.
+Suponha que há independência de dia para dia e que a probabilidade, num dia ao acaso, de que a entrega diária de todas as embalagens necessárias é {:NUMERICAL:%100%0.5:0.05}.
 
 **(a)**
 
@@ -464,11 +464,11 @@ A distribuição de Y é {:MULTICHOICE_S:%100%Binomial(4, 0.5)\~%-33.333%Normal(
 
 **(b)**
 
-P(Y > **2**) = **0.312**
+P(Y > **2**) = {:NUMERICAL:%100%0.312:0.05}
 
 **(c)**
 
-A probabilidade do produto não faltar em nenhum dia ao longo de **20** é {:NUMERICAL:%100%1:0.05}.
+A probabilidade do produto não faltar em nenhum dia ao longo de **20** é **1**.
 
 
 
